--- a/app/src/main/res/layout/activity_advance_breakout.xml
+++ b/app/src/main/res/layout/activity_advance_breakout.xml
@@ -6,7 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.gameloopexample.AdvanceBreakout">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <view
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        class="com.example.gameloopexample.MyView"
+        android:id="@+id/view"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
