--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,25 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:id="@+id/layout"
+    android:background="@drawable/breakoutimage">>
 
-    <view
+    <Button
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        class="com.example.gameloopexample.MyView"
-        android:id="@+id/view"
+        android:layout_height="wrap_content"
+        android:text="Start Game"
+        android:id="@+id/startGame"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="High Scores"
+        android:id="@+id/highScores"
+        android:layout_above="@+id/startGame"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
