--- a/app/src/main/res/layout/activity_advance_breakout.xml
+++ b/app/src/main/res/layout/activity_advance_breakout.xml
@@ -13,4 +13,13 @@
         android:id="@+id/view"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/score"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:text="Score" />
+
 </RelativeLayout>
