--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Restart"
+        android:text="Next Level"
         android:id="@+id/restart"
         android:layout_marginTop="186dp"
         android:layout_alignParentTop="true"
