--- a/app/src/main/res/layout/activity_create_board.xml
+++ b/app/src/main/res/layout/activity_create_board.xml
@@ -6,9 +6,39 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.gameloopexample.CreateBoardActivity">
 
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rows"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Enter Number of Rows for New Board" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Rows"
+        android:id="@+id/addRows"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Board"
+        android:id="@+id/createBoard"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/tableLayout"
+        android:layout_alignEnd="@+id/tableLayout"
+        android:enabled="true" />
+
     <TableLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"></TableLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rows"
+        android:id="@+id/tableLayout"
+        android:layout_above="@+id/addRows"></TableLayout>
+
 </RelativeLayout>
