--- a/app/src/main/res/layout/activity_lose.xml
+++ b/app/src/main/res/layout/activity_lose.xml
@@ -4,24 +4,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.gameloopexample.WinActivity"
-    android:background="@drawable/win">
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Next Level"
-        android:id="@+id/restart"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/mainMenu"
-        android:layout_alignStart="@+id/mainMenu" />
+    tools:context="com.example.gameloopexample.LoseActivity"
+    android:background="@drawable/einstein1_7">
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Main Menu"
         android:id="@+id/mainMenu"
-        android:layout_below="@+id/restart"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
