--- a/app/src/main/res/layout/activity_advance_breakout.xml
+++ b/app/src/main/res/layout/activity_advance_breakout.xml
@@ -11,17 +11,6 @@
         android:layout_height="fill_parent"
         class="com.example.gameloopexample.MyView"
         android:id="@+id/view"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/score" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/score"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:text="0"
-        android:numeric="integer" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
